<?xml version="1.0"?>
<package format="2">
  <name>move_base_wo_map</name>
  <version>0.0.0</version>
  <description>The move_base_wo_map package</description>

  <maintainer email="jianle001@e.ntu.edu.sg">Bruce Chan Jian Le</maintainer>
  <author email="jianle001@e.ntu.edu.sg">Bruce Chan Jian Le</author>
  <license>BSD</license>
  <url type="website">https://github.com/BruceChanJianLe/ros-move-base</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
